feature #164297553 Add updates to Landing page

--- a/UI/index.html
+++ b/UI/index.html
@@ -69,7 +69,7 @@
                         <div class="col-12 col-sm-12 col-md-6 col-lg-3">
                             <div class="work-card">
                                 <div class="card-header text-center bg-transparent border-0">
-                                    <img src="UI/assets/images/icons/1.svg" class="img-fluid" alt="number one icon">
+                                    <img src="assets/images/icons/1.svg" class="img-fluid" alt="number one icon">
                                 </div>
                                 <div class="card-body">
                                     <h3 class="f-24 fw-500 text-center"> Heading</h3>
@@ -80,7 +80,7 @@
                         <div class="col-12 col-sm-12 col-md-6 col-lg-3">
                             <div class="work-card">
                                 <div class="card-header text-center bg-transparent border-0">
-                                    <img src="UI/assets/images/icons/1-copy-3.svg" class="img-fluid" alt="number two icon">
+                                    <img src="assets/images/icons/1-copy-3.svg" class="img-fluid" alt="number two icon">
                                 </div>
                                 <div class="card-body">
                                     <h3 class="f-24 fw-500 text-center"> Heading</h3>
@@ -91,7 +91,7 @@
                         <div class="col-12 col-sm-12 col-md-6 col-lg-3">
                             <div class="work-card">
                                 <div class="card-header text-center bg-transparent border-0">
-                                    <img src="UI/assets/images/icons/1-copy-2.svg" class="img-fluid" alt="number three icon">
+                                    <img src="assets/images/icons/1-copy-2.svg" class="img-fluid" alt="number three icon">
                                 </div>
                                 <div class="card-body">
                                     <h3 class="f-24 fw-500  text-center"> Heading</h3>
@@ -102,7 +102,7 @@
                         <div class="col-12 col-sm-12 col-md-6 col-lg-3">
                             <div class="work-card">
                                 <div class="card-header text-center bg-transparent border-0">
-                                    <img src="UI/assets/images/icons/1-copy.svg" class="img-fluid" alt="number four icon">
+                                    <img src="assets/images/icons/1-copy.svg" class="img-fluid" alt="number four icon">
                                 </div>
                                 <div class="card-body">
                                     <h3 class="f-24 fw-500 text-center"> Heading</h3>
@@ -121,7 +121,7 @@
                         <div class="col-12 col-sm-12 col-md-6 col-lg-3">
                             <div class="features-card">
                                 <div class="card-header bg-transparent border-0 text-center">
-                                    <img src="UI/assets/images/icons/naira.png" class="img-fluid" alt="naira icon">
+                                    <img src="assets/images/icons/naira.png" class="img-fluid" alt="naira icon">
                                 </div>
                                 <div class="card-body">
                                     <h3 class="f-24 fw-500 text-center">Lorem Ipsum</h3>
@@ -133,7 +133,7 @@
                         <div class="col-12 col-sm-12 col-md-6 col-lg-3">
                             <div class="features-card">
                                 <div class="card-header  bg-transparent border-0 text-center">
-                                    <img src="UI/assets/images/icons/wallet.png" class="img-fluid" 
+                                    <img src="assets/images/icons/wallet.png" class="img-fluid" 
                                         alt="wallet icon">
                                 </div>
                                 <div class="card-body">
@@ -146,7 +146,7 @@
                         <div class="col-12 col-sm-12 col-md-6 col-lg-3">
                             <div class="features-card">
                                 <div class="card-header bg-transparent border-0 text-center">
-                                    <img src="UI/assets/images/icons/listed-apartments.png" 
+                                    <img src="assets/images/icons/listed-apartments.png" 
                                         class="img-fluid" alt="listed apartmets icon">
                                 </div>
                                 <div class="card-body">
@@ -159,7 +159,7 @@
                         <div class="col-12 col-sm-12 col-md-6 col-lg-3">
                             <div class="features-card">
                                 <div class="card-header bg-transparent border-0 text-center">
-                                    <img src="UI/assets/images/icons/5-point-star.svg" class="img-fluid" alt="five star icon">
+                                    <img src="assets/images/icons/5-point-star.svg" class="img-fluid" alt="five star icon">
                                 </div>
                                 <div class="card-body">
                                     <h3 class="f-24 fw-500 text-center">Lorem Ipsum</h3>
@@ -179,19 +179,19 @@
                     <div class="row mt-5">
                         <div class="col-12 col-md-6 col-lg-4">
                             <figure>
-                                <img src="UI/assets/images/rectangle-9.png" class="w-100" alt="yaba">
+                                <img src="assets/images/rectangle-9.png" class="w-100" alt="yaba">
                                 <figcaption class="text-center pt-3">Abuja</figcaption>
                             </figure>
                         </div>
                         <div class="col-md-6 col-lg-4">
                             <figure>
-                                <img src="UI/assets/images/rectangle-9.png" class="w-100" alt="Surulere">
+                                <img src="assets/images/rectangle-9.png" class="w-100" alt="Surulere">
                                 <figcaption class="text-center pt-3">Lagos</figcaption>
                             </figure>
                         </div>
                         <div class="col-md-6 col-lg-4">
                             <figure>
-                                <img src="UI/assets/images/rectangle-9.png" class="w-100" alt="Ikeja">
+                                <img src="assets/images/rectangle-9.png" class="w-100" alt="Ikeja">
                                 <figcaption class="text-center pt-3">Owerri</figcaption>
                             </figure>
                         </div>
