--- a/UI/index.html
+++ b/UI/index.html
@@ -52,8 +52,8 @@
 		<main>
             <div class="banner_img">
                 <div class="inner-content">
-                    <h1 class="text-white f-source font-weight-light">Pay monthly for affordable apartments </h1>
-                    <p class="text-white mt-5">Find great apartments in Lagos at prices you can afford </p>
+                    <h1 class="text-white f-source font-weight-light">Get affordable apartments </h1>
+                    <p class="text-white mt-5">Find great apartments in any location at prices you can afford </p>
                 </div>
             </div>
             <!-- ./End Banner -->
