--- a/UI/onsale_apartments.html
+++ b/UI/onsale_apartments.html
@@ -11,7 +11,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:200,300,400" rel="stylesheet">
 		<link rel="stylesheet" href="assets/css/style.css">
 
-		<title>BYARENT | Rental</title>
+		<title>BYARENT | For Sale</title>
 	</head>
 	<body>
 		<!-- header -->
@@ -29,10 +29,10 @@
 	            <div class="collapse navbar-collapse" id="navbarSupportedContent">
 	                <ul class="navbar-nav mr-auto"> </ul>
 	                <ul class="navbar-nav navbar-right">
-	                    <li class="nav-item active">
+	                    <li class="nav-item ">
 	                        <a class="nav-link font-color hover-link" href="rental.html">Rental Apartments</a>
 	                    </li>
-	                    <li class="nav-item">
+	                    <li class="nav-item active">
 	                        <a class="nav-link font-color hover-link" href="onsale_apartments.html">On Sale Apartments</a>
 	                    </li>
 	                    <li class="nav-item">
@@ -51,7 +51,7 @@
 		<!-- main -->
 		<main>
             <div class="container mt-5">
-                <h3>Rental Apartments</h3>
+                <h3>On Sale Apartments</h3>
                 <div class="row mt-5">
                     <div class="col-md-6 col-lg-3"> 
                         <div class="card house-card border-0">  
