--- a/UI/rental.html
+++ b/UI/rental.html
@@ -19,7 +19,7 @@
 			<nav class="navbar navbar-expand-lg bg-white border-bottom">
 	            <a class="navbar-brand" href="index.html">
 	                <h3 class="font-weight-light">
-	                	BY<span class="grey-text">ARENT</span>
+	                	BY<span class="brand-color">ARENT</span>
 	                </h3>
 	            </a>
 	            <button class="navbar-toggler bg-brand" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,7 +36,7 @@
 	                        <a class="nav-link font-color hover-link" href="onsale_apartments.html">On Sale Apartments</a>
 	                    </li>
 	                    <li class="nav-item">
-	                        <a class="nav-link font-color hover-link" href="signup.html">Sign Up</a>
+	                        <a class="nav-link font-color hover-link" href="register.html">Sign Up</a>
 	                    </li>
 	                    <li class="nav-item">
 	                        <a class="nav-link font-color hover-link" href="login.html">Log In</a>
