[feature #164298831] Add puchase modal

--- a/UI/onsale_apartments.html
+++ b/UI/onsale_apartments.html
@@ -70,20 +70,23 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3">
-                        <div class="card house-card border-0">  
-                            <img src="assets/images/apartments/rectangle-12.png" alt="aprtments">
-                            <div class="card-body p-0 pt-3">
-                                <h4 class="grey-text f-16 f-source">ENTIRE APARTMENT 4 BEDS</h4>
-                                <h3 class="f-16 fw-600">New 3 bed room Flat near kuramo beach</h3>
+                        <a href="home_details.html" class="dis-block">
+                            <div class="card house-card border-0">  
+                                <img src="assets/images/apartments/rectangle-12.png" alt="aprtments">
+                                <div class="card-body p-0 pt-3">
+                                    <h4 class="grey-text f-16 f-source">ENTIRE APARTMENT 4 BEDS</h4>
+                                    <h3 class="f-16 fw-600">New 3 bed room Flat near kuramo beach</h3>
+                                </div>
+                                <div class="card-footer bg-transparent border-0 p-0 pt-3 f-source">
+                                    <p class="grey-text">
+                                        <span> &#8358;110,000</span>
+                                        <span><i class="fa fa-map-marker"></i></span>
+                                        <span>ABUJA</span>
+                                    </p>
+                                </div>
                             </div>
-                            <div class="card-footer bg-transparent border-0 p-0 pt-3 f-source">
-                                <p class="grey-text">
-                                    <span> &#8358;110,000</span>
-                                    <span><i class="fa fa-map-marker"></i></span>
-                                    <span>ABUJA</span>
-                                </p>
-                            </div>
-                        </div>
+                        </a>
+                        
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <div class="card house-card border-0">  
