--- a/UI/home_details.html
+++ b/UI/home_details.html
@@ -81,7 +81,32 @@
                 
                 <div class="row">
                     <div class="col-md-8 col-lg-8">
-                        <p class="f-16 text-uppercase">entire apartment</p>
+                        <div class="row justify-content-between px-3 mb-3">
+                            <div class="col-lg-4 p-0">
+                                <p class="f-16 text-uppercase">entire apartment</p>
+                            </div>
+                            <div class="col-lg-4 f-16 text-uppercase">
+                                <button type="button" class="btn btn-outline-primary px-5 pull-right"  data-toggle="modal" data-target=".bd-example-modal-lg">Buy</button>
+                                <!-- Large modal -->
+                                <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                                  <div class="modal-dialog modal-lg">
+                                    <div class="modal-content">
+                                      <div class="modal-header">
+                                          <h3 class="modal-title">Added to shopping cart</h3>
+                                      </div>
+                                      <div class="modal-body">
+                                          <p class="f-16 text-center">Success!</p>
+                                          <div class="text-center py-5">
+                                              <button class="btn btn-outline-primary mr-4">Continue Shopping</button>
+                                              <a class="btn btn-success" href="">View Cart and Checkout</a>
+                                          </div>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+                            </div>
+                        </div>
+                        
                         <h3 class="title_desc">New 3 Bedroom Flat Near Kuramo Beach</h3>
                         <p class="location">Kupe Phase 1, Abuja</p>
                         <div class="row">
