[feature #164298898] Add sale checkout page

--- a/UI/home_details.html
+++ b/UI/home_details.html
@@ -98,7 +98,7 @@
                                           <p class="f-16 text-center">Success!</p>
                                           <div class="text-center py-5">
                                               <button class="btn btn-outline-primary mr-4">Continue Shopping</button>
-                                              <a class="btn btn-success" href="">View Cart and Checkout</a>
+                                              <a class="btn btn-success" href="checkout.html">View Cart and Checkout</a>
                                           </div>
                                       </div>
                                     </div>
